[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/nocounturn.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player2nocam.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43, 43 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 49 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 8
script = ExtResource( 2 )
gravity = 2000.0

[node name="player" type="Sprite" parent="."]
position = Vector2( 0, -50 )
scale = Vector2( 0.1, 0.07 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -42 )
shape = SubResource( 1 )

[node name="EnemyDetector" type="Area2D" parent="."]
modulate = Color( 0.027451, 0.141176, 0.384314, 1 )
show_behind_parent = true
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( 0, -42 )
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
